<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:background="@color/grey">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backhome"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="379dp"
        android:background="@drawable/arrow_back_icon_234308"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/random_avatar"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAvatar" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/strittext"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/city"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/telephone"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"/>

    <TextView
        android:id="@+id/tvPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/number"
        android:textColor="@color/sin"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <TextView
        android:id="@+id/txpochta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/pochtatext"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/textemail"
        android:textColor="@color/sin"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/txpochta"
        app:layout_constraintStart_toEndOf="@+id/txpochta"
        app:layout_constraintTop_toTopOf="@+id/txpochta" />

    <TextView
        android:id="@+id/txpassw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/textpass"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txpochta" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="password"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/txpassw"
        app:layout_constraintStart_toEndOf="@+id/txpassw"
        app:layout_constraintTop_toTopOf="@+id/txpassw" />

    <TextView
        android:id="@+id/txcoor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="координаты:"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txpassw" />

    <TextView
        android:id="@+id/tvCoordinates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="coordinates"
        android:textColor="@color/sin"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/txcoor"
        app:layout_constraintStart_toEndOf="@+id/txcoor"
        app:layout_constraintTop_toTopOf="@+id/txcoor" />

    <TextView
        android:id="@+id/txsex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="пол:"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txcoor" />

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="gender"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/txsex"
        app:layout_constraintStart_toEndOf="@+id/txsex"
        app:layout_constraintTop_toTopOf="@+id/txsex" />

    <TextView
        android:id="@+id/txage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="10dp"
        android:text="полных лет:"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txsex" />

    <TextView
        android:id="@+id/tvAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="Age"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/txage"
        app:layout_constraintTop_toTopOf="@+id/txage" />

</androidx.constraintlayout.widget.ConstraintLayout>